# MOS-6502-disassembler

./: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  feed.py  generate-binaries.py  generate-megabinary.py  opcode-table.csv
.github/workflows/: release.yml  validation.yml
benches/: disassemble.rs  disassemble_mega_bin.rs
src/: api.rs  disassemble.rs  frontend.rs  lib.rs  main.rs
templates/: main.html  table-error.html  table.html  textarea.html
test-bin/: mega.example  test1.example  test2.example
