[package]
name = "mos_6502_disassembler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5.9", features = ["derive"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
serde_json = "1.0.120"
askama = "0.12.1"

[dev-dependencies]
reqwest = { version = "0.11.20", features = ["json"]}

