[package]
name = "mos_6502_disassembler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5.9", features = ["derive"] }
serde_json = "1.0.120"
askama = "0.12.1"
poem = "3.0.3"
poem-openapi = { version = "5.0.3", features = ["swagger-ui"] }
reqwest = { version = "0.11.20", features = ["multipart"] }

[dev-dependencies]
criterion = "0.5.1"
reqwest = { version = "0.11.20", features = ["json"]}

[[bench]]
name = "disassemble_mega_bin"
harness = false
